src-tauri/tests/snapshots/pipeline_streams__stream_replay@mimo__text-reasoning-tool.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/mimo/text-reasoning-tool.jsonl
---
line_count: 14
checkpoint_count: 1
checkpoints:
  - line_index: 11
    event_type: opencode/session.status
    roles:
      - assistant
    last_part_types:
      - reasoning
      - text
      - tool-call
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 3
persisted_turns:
  turn_count: 1
  total_blocks: 3
  turns:
    - role: assistant
      block_types:
        - reasoning
        - text
        - tool
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - text
        - tool-call
